--- a/_layouts/news-and-tips.html
+++ b/_layouts/news-and-tips.html
@@ -12,4 +12,19 @@ hidden:
   - sidebar
 ---
 
- {%- include extensions/mermaid.html -%}
+<script>
+      window.addEventListener('DOMContentLoaded', function(){
+                 var config = {
+                      startOnLoad:true,
+                      htmlLabels:true,
+                      callback:function(id){
+                          console.log(id,' rendered');
+                      },
+                      flowchart:{
+                              useMaxWidth:false,
+                          }
+                  };
+                  
+                  mermaid.initialize(config);
+              },false);
+</script>
