--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -78,7 +78,7 @@ setTimeout(()=>{
   <h3><a href="https://github.com/ps2wiki/Contributing">➽ Contributing</a></h3>
   Have new ideas or want to help improve existing stuff? Learn about how you can contribute!
   </br></br><hr></br>
-  <h3><a href="https://ps2wiki.github.io/sas-apps-archive">➽ SAS App Archive <sup><img height="12.5" src="https://i.imgur.com/A2a38O0.gif"/></sup></a></h3>
+  <h3><a href="https://ps2wiki.github.io/sas-apps-archive">➽ SAS App Archive <sup><img height="12.5" src="https://i.imgur.com/wcQLQOn.gif"/></sup></a></h3>
   The one place to download all* PS2 Apps! </br>
   <sub>*Only MC installable apps available</sub>
   </br></br><hr></br>
