--- a/_includes/views/footer.html
+++ b/_includes/views/footer.html
@@ -21,6 +21,7 @@
         </div>
         <div style="float: right; width: 50%; text-align: right">  
         <div><a title="Terms of Service - PS2Wiki" href="https://ps2wiki.github.io/about.html#terms-of-service">Terms of Service</a></div>
+        <div><a title="LICENSE - PS2Wiki" href="https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/PS2Wiki_Provisional_LICENSE.txt">LICENSE</a></div>
         </div>
       </div>
     </div>
