--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -37,9 +37,9 @@ setTimeout(()=>{
 <a style="font-size: 10px; color: #bf9000" href="https://ps2wiki.github.io/archive/news.html" class="clbtn">Previous News<sup>[↗]</sup></a>
 <img src="https://i.imgur.com/1UZvuCz.gif"/><strong style="font-size: 1.10em">{{ page.news }}</strong></div></div>
 
-<!-- Tips, Site Guide & Latest Posts --> <div class="home_multi_post_block">
+<!-- Tips, Site Guide & Latest Posts --> <div style="width: 70%" class="home_multi_post_block">
 <div style="left: 10px; right: 12.5px">
-<div style="width= 70%" class="home_siteguide_and_misc_parent">
+<div class="home_siteguide_and_misc_parent">
 
 <!-- Tips -->
 <div style="right: 12.5px; border-radius: 10px; padding: 5px; padding-right: 10px; border: 3px outset #ffffff; background-color: #4e58a2; color: #eeeeee" class="home_daily_tips">
