--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -323,6 +323,11 @@ table {
   padding-bottom: 100px; 
   display: flex
 }
+.home_position_subparent {
+    width: 70%; 
+    left: 10px; 
+    right: 12.5px;
+}
 .home_news_block {
     border-radius: 10px; 
     padding: 5px; 
@@ -331,6 +336,10 @@ table {
     color: #eeeeee;
   }
 @media (max-width: 400px) {
+.home_position_subparent {
+    left: 10px; 
+    right: 12.5px;
+}
   .home_news_block {
     width: 100%;
     border-radius: 10px; 
