--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -335,6 +335,12 @@ table {
     background-color: #134f5c; 
     color: #eeeeee;
   }
+.home_latest_posts {
+  left: 0px;
+  width: 100%;
+  display: block; 
+  margin-right: 12.5px;
+  }
 @media (max-width: 400px) {
 .home_position_subparent {
     width: 100%;
