--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -345,7 +345,7 @@ table {
 
 @media (max-width: 400px) {
 .home_position_subparent {
-    width: 90%;
+    width: 100%;
     left: 10px; 
     right: 12.5px;
 }
@@ -356,6 +356,7 @@ table {
     border: 3px outset #ffffff; 
     background-color: #134f5c; 
     color: #eeeeee;
+    margin-right: 0px
   }
   .home_multi_post_block {
   left: 0px;
@@ -368,7 +369,7 @@ table {
   }
  .home_latest_posts {
   left: 0px;
-  width: 75%;
+  width: 85%;
   display: block; 
   margin-right: 12.5px;
   }
