--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -344,6 +344,7 @@ table {
   }
 
 @media (max-width: 400px) {
+
 .home_position_subparent {
     width: 100%;
     left: 10px; 
@@ -356,7 +357,7 @@ table {
     border: 3px outset #ffffff; 
     background-color: #134f5c; 
     color: #eeeeee;
-    margin-right: 0px
+    margin-right: 0px;
   }
   .home_multi_post_block {
   left: 0px;
@@ -369,7 +370,7 @@ table {
   }
  .home_latest_posts {
   left: 0px;
-  width: 85%;
+  width: 82.5%;
   display: block; 
   margin-right: 12.5px;
   }
