--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -351,7 +351,7 @@ table {
     right: 12.5px;
 }
   .home_news_block {
-    width: auto;
+    width: 100%;
     border-radius: 10px; 
     padding: 5px; 
     border: 3px outset #ffffff; 
