--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@ banner: 'default'
 ---
 
 <!-- Position --> <div style="left: 0px; width: 100%; position: absolute; margin: auto">
-<div style="padding-left: 25px; padding-right: 25px">
+<div style="width: 100%; padding-left: 25px; padding-right: 25px">
   
 <!-- Page begins -->
 <h1 style="font-family: Faculty Glyphic; text-align: center; font-size: 3.5em; font-weight: bold; text-decoration: underline; color: #ffffff">The PS2 Homebrew Wiki</h1>
