--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -99,6 +99,6 @@ setTimeout(()=>{
 
 </div>
 
-<div style="bottom: 0; left:0px; min-width: 100%; border-top: 3px outset #ffffff; color: #eeeeee">
+<div style="bottom: 0; left: 0px; right: 0px; min-width: 100%; border-top: 3px outset #ffffff; color: #eeeeee">
   {%- include views/footer.html -%}
 </div></div>
