--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -329,6 +329,7 @@ table {
     right: 12.5px;
 }
 .home_news_block {
+    width: 90%;
     border-radius: 10px; 
     padding: 5px; 
     border: 3px outset #ffffff; 
