--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@ subheading: 'The PS2 Homebrew Wiki'
 banner: 'default'
 ---
 
-<!-- Position --> <div style="left: 0px; width: 100%; position: absolute; margin: auto">
+<!-- Position --> <div style="left: 0px; right: 0px; width: 100%; position: absolute; margin: auto">
 <div style="width: 100%; padding-left: 25px; padding-right: 25px">
   
 <!-- Page begins -->
