--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -86,7 +86,7 @@ setTimeout(()=>{
   
 <div style="padding: 6.25px"></div>
   
-<div style="max-height: 1500px; overflow-y: auto;  overflow-x: hidden; left: 12.5px; right: 12.5px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; color: #eeeeee" class="home_latest_posts">
+<div style="max-height: 1500px; width: 100%; overflow-y: auto; overflow-x: hidden; left: 12.5px; right: 12.5px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; color: #eeeeee" class="home_latest_posts">
    <h1 style="font-size: 27.5px; color: #ffffff">➤ Latest Posts</h1>
   <hr></br>
   <div class="articles">
@@ -99,6 +99,6 @@ setTimeout(()=>{
 
 </div>
 
-<div style="position: absolute; bottom: 0; left: 0px; right: 0px; min-width: 100%; border-top: 3px outset #ffffff; color: #eeeeee">
+<div style="position: absolute; bottom: 0; left: 0px; right: 0px; min-width: 100%; border-top: 3px outset #ffffff; color: #eeeeee"><div style="margin: auto">
   {%- include views/footer.html -%}
-</div></div>
+</div></div></div>
