--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -340,7 +340,7 @@ table {
 .home_latest_posts {
   left: 0px;
   right: 0px;
-  min-width: 50%;
+  width: 100%;
   display: block; 
   margin-right: 0px;
   }
