--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -353,7 +353,7 @@ table {
     right: 12.5px;
 }
   .home_news_block {
-    width: 95%;
+    width: auto;
     border-radius: 10px; 
     padding: 5px; 
     border: 3px outset #ffffff; 
