--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -329,7 +329,7 @@ table {
     right: 32.5px;
 }
 .home_news_block {
-    width: auto;
+    width: 90;
     border-radius: 10px; 
     padding: 5px; 
     border: 3px outset #ffffff; 
