--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,9 +33,9 @@ setTimeout(()=>{
 </script></br></div>
 </br></br></br></br></br>
   
-<!-- News --> <div class="home_news_block">
+<!-- News --><div style="width=100%"> <div class="home_news_block">
 <a style="font-size: 10px; color: #bf9000" href="https://ps2wiki.github.io/archive/news.html" class="clbtn">Previous News<sup>[↗]</sup></a>
-<img src="https://i.imgur.com/1UZvuCz.gif"/><strong style="font-size: 1.10em">{{ page.news }}</strong></div></div>
+<img src="https://i.imgur.com/1UZvuCz.gif"/><strong style="font-size: 1.10em">{{ page.news }}</strong></div></div></div>
 
 <!-- Tips, Site Guide & Latest Posts --> <div class="home_multi_post_block">
 <div class="home_position_subparent">
