--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,8 +6,8 @@ subheading: 'The PS2 Homebrew Wiki'
 banner: 'default'
 ---
 
-<!-- Position --> <div style="left: 0px; right: 0px; width: 100%; position: absolute; margin: auto">
-<div style="width: 100%; padding-left: 25px; padding-right: 25px">
+<!-- Position --> <div style="left: 0px; width: 100%; position: absolute; margin: auto">
+<div style="padding-left: 25px; padding-right: 25px">
   
 <!-- Page begins -->
 <h1 style="font-family: Faculty Glyphic; text-align: center; font-size: 3.5em; font-weight: bold; text-decoration: underline; color: #ffffff">The PS2 Homebrew Wiki</h1>
@@ -33,17 +33,17 @@ setTimeout(()=>{
 </script></br></div>
 </br></br></br></br></br>
   
-<!-- News --><div style="width=100%"> <div class="home_news_block">
+<!-- News --> <div class="home_news_block">
 <a style="font-size: 10px; color: #bf9000" href="https://ps2wiki.github.io/archive/news.html" class="clbtn">Previous News<sup>[↗]</sup></a>
-<img src="https://i.imgur.com/1UZvuCz.gif"/><strong style="font-size: 1.10em">{{ page.news }}</strong></div></div></div>
+<img src="https://i.imgur.com/1UZvuCz.gif"/><strong style="font-size: 1.10em">{{ page.news }}</strong></div></div>
 
 <!-- Tips, Site Guide & Latest Posts --> <div class="home_multi_post_block">
-<div class="home_position_subparent">
+<div style="left: 10px; right: 12.5px">
 <div class="home_siteguide_and_misc_parent">
 
 <!-- Tips -->
 <div style="right: 12.5px; border-radius: 10px; padding: 5px; padding-right: 10px; border: 3px outset #ffffff; background-color: #4e58a2; color: #eeeeee" class="home_daily_tips">
-<a style="font-size: 10px; color: #e9a83e" href="https://ps2wiki.github.io/archive/tips.html" class="clbtn">Previous Tips<sup>[↗]</sup></a><img src="https://i.imgur.com/1qlGJm8.gif"/><!--krx--><strong style="font-size: 1.0em">{{ page.tips }}</strong>
+<a style="font-size: 10px; color: #e9a83e" href="https://ps2wiki.github.io/archive/tips.html" class="clbtn">Previous Tips<sup>[↗]</sup></a><img src="https://i.imgur.com/jaqbxYW.gif"/><!--krx--><strong style="font-size: 1.0em">{{ page.tips }}</strong>
 </div></br>
   
 <!-- Site Guide -->
@@ -86,7 +86,7 @@ setTimeout(()=>{
   
 <div style="padding: 6.25px"></div>
   
-<div style="max-height: 1500px; overflow-y: auto; overflow-x: hidden; left: 12.5px; right: 12.5px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; color: #eeeeee" class="home_latest_posts">
+<div style="max-height: 1500px; overflow-y: auto;  overflow-x: hidden; width: 80%; left: 12.5px; right: 12.5px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; color: #eeeeee" class="home_latest_posts">
    <h1 style="font-size: 27.5px; color: #ffffff">➤ Latest Posts</h1>
   <hr></br>
   <div class="articles">
@@ -99,6 +99,6 @@ setTimeout(()=>{
 
 </div>
 
-<div style="position: absolute; bottom: 0; min-width: 100%; border-top: 3px outset #ffffff; color: #eeeeee"><div style="margin: auto">
+<div style="bottom: 0; left:0px; width: 100%; border-top: 3px outset #ffffff; color: #eeeeee">
   {%- include views/footer.html -%}
-</div></div></div>
+</div></div>
