--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -43,7 +43,7 @@ setTimeout(()=>{
 
 <!-- Tips -->
 <div style="right: 12.5px; border-radius: 10px; padding: 5px; padding-right: 10px; border: 3px outset #ffffff; background-color: #4e58a2; color: #eeeeee" class="home_daily_tips">
-<a style="font-size: 10px; color: #e9a83e" href="https://ps2wiki.github.io/archive/tips.html" class="clbtn">Previous Tips<sup>[↗]</sup></a><img src="https://i.imgur.com/JqaotQ8.gif"/><!--krx--><strong style="font-size: 1.0em">{{ page.tips }}</strong>
+<a style="font-size: 10px; color: #e9a83e" href="https://ps2wiki.github.io/archive/tips.html" class="clbtn">Previous Tips<sup>[↗]</sup></a><img src="https://i.imgur.com/3wdUA2g.gif"/><!--krx--><strong style="font-size: 1.0em">{{ page.tips }}</strong>
 </div></br>
   
 <!-- Site Guide -->
