--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,7 +38,7 @@ setTimeout(()=>{
 <img src="https://i.imgur.com/1UZvuCz.gif"/><strong style="font-size: 1.10em">{{ page.news }}</strong></div></div>
 
 <!-- Tips, Site Guide & Latest Posts --> <div class="home_multi_post_block">
-<div style="left: 10px; right: 12.5px">
+<div class="home_post_subparent">
 <div class="home_siteguide_and_misc_parent">
 
 <!-- Tips -->
