--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -323,6 +323,11 @@ table {
   padding-bottom: 100px; 
   display: flex
 }
+.home_post_subparent {
+    width: 70%;
+    left: 10px; 
+    right: 12.5px;
+}
 .home_news_block {
     border-radius: 10px; 
     padding: 5px; 
@@ -345,6 +350,12 @@ table {
   display: block; 
   margin: auto; 
   }
+
+.home_post_subparent {
+    width: auto;
+    left: 10px; 
+    right: 12.5px;
+}
   .home_siteguide_and_misc_parent {
   width: 100%;
   }
