--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -7,7 +7,7 @@
   display: flex
 }
 .home_post_subparent {
-    max-width: 30%;
+    max-width: 35%;
     left: 10px; 
     right: 12.5px;
 }
@@ -35,7 +35,8 @@
   }
 
 .home_post_subparent {
-    max-width: 100%;
+    width: auto;
+    max-width: 95%;
     left: 10px; 
     right: 12.5px;
 }
