--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -99,34 +99,6 @@ setTimeout(()=>{
 
 </div>
 
-<div style="bottom: 0; left:0px; min-width: 100%; border-top: 3px outset #ffffff; color: #eeeeee">
-  <footer class="site-footer h-card">
-  <data class="u-url" href="{{ "/" | relative_url }}"></data>
-
-  <div class="footer_font_adjust">
-    <div class="wrapper">
-      <div class="site-footer-inner">
-          {%- assign currentYear = 'now' | date: "%Y" -%}
-          {%- assign copyright = site.copyright
-              | replace: '{currentYear}', currentYear
-              | replace: '{author}', site.author
-              | replace: '(c)', '&copy;'
-              | replace: '(p)', '℗'
-              | replace: '(cleft)', '<span class="copyleft">&copy;</span>'
-          -%}
-        <div style="float: left; width: 50%">
-        <div>{{ copyright }}</div>
-        <div>Powered by <a title="Jekyll is a simple, blog-aware, static site
-        generator." href="https://jekyllrb.com/">Jekyll</a> &amp; <a title="Yat, yet
-        another theme." href="https://github.com/jeffreytse/jekyll-theme-yat">Yat Theme</a>.</div>
-        <div class="footer-col rss-subscribe">Subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></div>
-        </div>
-        <div style="float: right; width: 50%; text-align: right">  
-        <div><a title="Terms of Service - PS2Wiki" href="https://ps2wiki.github.io/about.html#terms-of-service">Terms of Service</a></div>
-        <div><a title="LICENSE - PS2Wiki" href="https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/PS2Wiki_Provisional_LICENSE.txt">LICENSE</a></div>
-        </div>
-      </div>
-    </div>
-  </div>
-</footer>
+<div style="border-top: 3px outset #ffffff; color: #eeeeee">
+    {%- include views/footer.html -%}
 </div></div>
