--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -99,6 +99,6 @@ setTimeout(()=>{
 
 </div>
 
-<div style="border-top: 3px outset #ffffff; color: #eeeeee">
+<div style="bottom: 0px; border-top: 3px outset #ffffff; color: #eeeeee">
     {%- include views/footer.html -%}
 </div></div>
