--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@ subheading: 'The PS2 Homebrew Wiki'
 banner: 'default'
 ---
 
-<!-- Position --> <div style="position: absolute"><div style="left: 0px; width: 100%; margin: auto">
+<!-- Position --> <div style="position: absolute; left: 0px"><div style="left: 0px; width: 100%; margin: auto">
 <div style="padding-left: 25px; padding-right: 25px">
   
 <!-- Page begins -->
@@ -99,6 +99,6 @@ setTimeout(()=>{
 
 </div></div>
 
-<div style="bottom: 0px; margin-left: auto; margin-right: auto; border-top: 3px outset #ffffff; color: #eeeeee">
+<div style="bottom: 0px; margin-left: auto; margin-right: auto; min-width: 100%; border-top: 3px outset #ffffff; color: #eeeeee">
     {%- include views/footer.html -%}
 </div></div>
