--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -99,6 +99,6 @@ setTimeout(()=>{
 
 </div></div>
 
-<div style="bottom: 0px; margin: 0 auto; min-width: 100%; border-top: 3px outset #ffffff; color: #eeeeee">
+<div style="bottom: 0px; min-width:100%; margin: 0 auto; min-width: 100%; border-top: 3px outset #ffffff; color: #eeeeee">
     {%- include views/footer.html -%}
 </div></div>
