--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -101,7 +101,7 @@ setTimeout(()=>{
 
 <div style="display: inline-block; bottom: 0px; min-width:100%; margin: 0 auto; min-width: 100%; border-top: 3px outset #ffffff; color: #eeeeee">
 
-    <div class="site-footer h-card">
+<div style="min-width: 100%" class="site-footer h-card">
   <data class="u-url" href="{{ "/" | relative_url }}"></data>
 
   <div class="footer_font_adjust">
