--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@ subheading: 'The PS2 Homebrew Wiki'
 banner: 'default'
 ---
 
-<!-- Position --> <div style="position: absolute; left: 0px; right: 0px"><div style="left: 0px; width: 100%; margin: auto">
+<!-- Position --> <div style="position: absolute; left: 0px; margin-right: 0px"><div style="left: 0px; width: 100%; margin: auto">
 <div style="padding-left: 25px; padding-right: 25px">
   
 <!-- Page begins -->
