--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -99,7 +99,7 @@ setTimeout(()=>{
 
 </div></div>
 
-<div style="display: inline-block; bottom: 0px; min-width:100%; margin: 0 auto; min-width: 100%; border-top: 3px outset #ffffff; color: #eeeeee">
+<div style="display: inline-block; bottom: 0px; min-width:100%; margin-right: 0px; min-width: 100%; border-top: 3px outset #ffffff; color: #eeeeee">
 
 {% include views/footer.html %}
 
