--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@ subheading: 'The PS2 Homebrew Wiki'
 banner: 'default'
 ---
 
-<!-- Position --> <div style="position: absolute; left: 0px; margin-right: 0px"><div style="left: 0px; width: 100%; margin: auto">
+<!-- Position --> <div style="position: absolute; left: 0px; width: 100%; margin: auto">
 <div style="padding-left: 25px; padding-right: 25px">
   
 <!-- Page begins -->
@@ -97,10 +97,9 @@ setTimeout(()=>{
   {% include views/pagination.html %}
 </div></div>
 
-</div></div>
+</div>
 
-<div style="display: inline-block; bottom: 0px; min-width:100%; margin-right: 0px; min-width: 100%; border-top: 3px outset #ffffff; color: #eeeeee">
-
+<div style="bottom: 0px; border-top: 3px outset #ffffff; color: #eeeeee">
 {% include views/footer.html %}
 
 </div></div>
