--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,7 +35,7 @@ setTimeout(()=>{
   
 <!-- News --> <div class="home_news_block">
 <a style="font-size: 10px; color: #bf9000" href="https://ps2wiki.github.io/archive/news.html" class="clbtn">Previous News<sup>[↗]</sup></a>
-<img src="https://i.imgur.com/1UZvuCz.gif"/><strong style="font-size: 1.10em">{{ page.news }}</strong></div></div>
+<img src="https://i.imgur.com/1UZvuCz.gif"/><strong style="font-size: 1.10em">{{ page.news }}</strong></div>
 
 <!-- Tips, Site Guide & Latest Posts --> <div class="home_multi_post_block">
 <div class="home_post_subparent">
@@ -102,4 +102,4 @@ setTimeout(()=>{
 <div style="bottom: 0px; border-top: 3px outset #ffffff; color: #eeeeee">
 {% include views/footer.html %}
 
-</div></div>
+</div></div></div>
