--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@ banner: 'default'
 ---
 
 <!-- Position --> <div style="position: absolute; left: 0px; width: 100%; margin: auto">
-<div style="padding-left: 25px; padding-right: 25px">
+<div style="padding-left: 0px; padding-right: 0px">
   
 <!-- Page begins -->
 <h1 style="font-family: Faculty Glyphic; text-align: center; font-size: 3.5em; font-weight: bold; text-decoration: underline; color: #ffffff">The PS2 Homebrew Wiki</h1>
@@ -33,7 +33,7 @@ setTimeout(()=>{
 </script></br></div>
 </br></br></br></br></br>
   
-<!-- News --> <div class="home_news_block">
+<!-- News --> <div style="padding-left: 25px; padding-right: 25px" class="home_news_block">
 <a style="font-size: 10px; color: #bf9000" href="https://ps2wiki.github.io/archive/news.html" class="clbtn">Previous News<sup>[↗]</sup></a>
 <img src="https://i.imgur.com/1UZvuCz.gif"/><strong style="font-size: 1.10em">{{ page.news }}</strong></div>
 
