--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -97,9 +97,9 @@ setTimeout(()=>{
   {% include views/pagination.html %}
 </div></div>
 
-</div>
+</div></div>
 
 <div style="bottom: 0px; border-top: 3px outset #ffffff; color: #eeeeee">
 {% include views/footer.html %}
 
-</div></div></div>
+</div></div>
