--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -99,7 +99,7 @@ setTimeout(()=>{
 
 </div></div>
 
-<div style="bottom: 0px; border-top: 3px outset #ffffff; color: #eeeeee">
+<div style="width: 100%; bottom: 0px; border-top: 3px outset #ffffff; color: #eeeeee">
 {% include views/footer.html %}
 
 </div></div>
