--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@ banner: 'default'
 ---
 
 <!-- Position --> <div style="position: absolute; left: 0px; width: 100%; margin: auto">
-<div style="padding-left: 1px; padding-right: 1px">
+
   
 <!-- Page begins -->
 <h1 style="font-family: Faculty Glyphic; text-align: center; font-size: 3.5em; font-weight: bold; text-decoration: underline; color: #ffffff">The PS2 Homebrew Wiki</h1>
@@ -18,7 +18,8 @@ body {
   background-image: url('/assets/images/ps2wiki_bg.jpg');
 }
 </style>
-
+  
+<div style="padding-left: 25px; padding-right: 25px">
 
 <!-- Terms of Service Notice -->
 <div style="position: absolute"><div id="termsofservice" class="tos">
@@ -33,7 +34,7 @@ setTimeout(()=>{
 </script></br></div>
 </br></br></br></br></br>
   
-<!-- News --> <div style="padding-left: 25px; padding-right: 25px"><div class="home_news_block">
+<!-- News --> <div class="home_news_block">
 <a style="font-size: 10px; color: #bf9000" href="https://ps2wiki.github.io/archive/news.html" class="clbtn">Previous News<sup>[↗]</sup></a>
 <img src="https://i.imgur.com/1UZvuCz.gif"/><strong style="font-size: 1.10em">{{ page.news }}</strong></div></div>
 
@@ -97,9 +98,9 @@ setTimeout(()=>{
   {% include views/pagination.html %}
 </div></div>
 
-</div></div>
+</div>
 
-<div style="width: 100%; bottom: 0px; border-top: 3px outset #ffffff; color: #eeeeee">
+<div style="padding-left: 25px; padding-right: 25px; width: 100%; bottom: 0px; border-top: 3px outset #ffffff; color: #eeeeee">
 {% include views/footer.html %}
 
 </div></div>
