--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -100,7 +100,7 @@ setTimeout(()=>{
 
 </div>
 
-<div style="padding-left: 25px; padding-right: 25px; width: 100%; bottom: 0px; border-top: 3px outset #ffffff; color: #eeeeee">
+<div style="width: 100%; bottom: 0px; border-top: 3px outset #ffffff; color: #eeeeee; background-color: #000000">
 {% include views/footer.html %}
 
 </div></div>
