--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,7 +19,7 @@ body {
 }
 </style>
   
-<div style="padding-left: 25px; padding-right: 25px">
+<div style="width: 100%; padding-left: 25px; padding-right: 25px">
 
 <!-- Terms of Service Notice -->
 <div style="position: absolute"><div id="termsofservice" class="tos">
