--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -1,10 +1,17 @@
 /*------------------- Home Post Block -------------------*/
 
+.home_parent {
+  overflow-x: hidden; 
+  position: absolute; 
+  left: 0px; 
+  width: 100%; 
+  margin-right: auto;
+}
 .home_multi_post_block {
   left: 0px; 
   padding: 25px; 
   padding-bottom: 100px; 
-  display: flex
+  display: flex;
 }
 .home_post_subparent {
     max-width: 35%;
@@ -19,6 +26,9 @@
     color: #eeeeee;
   }
 @media (max-width: 400px) {
+  .home_parent {
+     margin-right: 25px;
+  }
   .home_news_block {
     width: 100%;
     border-radius: 10px; 
@@ -27,28 +37,27 @@
     background-color: #134f5c; 
     color: #eeeeee;
   }
-  .home_multi_post_block {
+.home_multi_post_block {
   left: 0px;
   width: 90%;
   display: block; 
   margin: auto; 
-  }
-
+}
 .home_post_subparent {
     width: auto;
     max-width: 100%;
     left: 10px; 
     right: 12.5px;
 }
-  .home_siteguide_and_misc_parent {
+.home_siteguide_and_misc_parent {
   width: 100%;
-  }
-  .home_latest_posts {
+}
+.home_latest_posts {
   left: 0px;
   width: 90%;
   display: block; 
   margin-right: 12.5px;
-  }
+}
 
 }
 
