--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -7,6 +7,9 @@
   width: 100%; 
   margin-right: auto;
 }
+.home_content {
+  margin-right: auto;
+}
 .home_multi_post_block {
   left: 0px; 
   padding: 25px; 
@@ -26,9 +29,9 @@
     color: #eeeeee;
   }
 @media (max-width: 400px) {
-  .home_parent {
-     margin-right: 25px;
-  }
+.home_content {
+  margin-right: 25px;
+}
   .home_news_block {
     width: 100%;
     border-radius: 10px; 
