--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,7 +21,7 @@ body {
   
 
 <!-- Terms of Service Notice -->
-<div style="padding-left: 25px; padding-right: 25px"><div style="position: absolute"><div id="termsofservice" class="tos">
+<div style="padding-left: 25px; padding-right: 25px"><div style="position: absolute; margin-right: 10px"><div id="termsofservice" class="tos">
   <span class="clbtn" onclick="this.parentElement.style.display='none';"><i class="fa fa-times-circle"></i></span>
   <strong>Important:</strong> Please read the <a href="https://ps2wiki.github.io/about.html#terms-of-service">Terms of Service</a> in <a href="https://ps2wiki.github.io/about.html">About</a> before using the site. Thankyou.
 </div>
