--- a/_layouts/default-home.html
+++ b/_layouts/default-home.html
@@ -5,12 +5,10 @@
   {%- include head.html -%}
 
   <body>
-
-    {%- include views/banner.html -%}
+    
+    {%- include views/header.html -%}
 
     {%- include extensions/hashlocate.html -%}
-
-    {%- include extensions/theme-toggle.html -%}
 
     {%- include extensions/click-to-top.html -%}
     
