--- a/_includes/extensions/theme-toggle.html
+++ b/_includes/extensions/theme-toggle.html
@@ -10,7 +10,7 @@
 </div>
 
 {%- assign name = 'night_mode' -%}
-{%- include functions.html func='get_value' default='auto' -%}
+{%- include functions.html func='get_value' default='{{ night_mode }}' -%}
 {%- assign night_mode = return -%}
 
 <script>
