--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,6 +4,7 @@ sidebar: category-list
 heading: PS2Wiki
 subheading: 'The PS2 Homebrew Wiki'
 banner: 'default'
+hidden: [banner]
 ---
 
 <!-- Position --> <div class="home_parent">
