--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,16 @@ sidebar: category-list
 heading: PS2Wiki
 subheading: 'The PS2 Homebrew Wiki'
 banner: 'default'
-hidden: [banner]
+hidden:
+  - header
+  - navigator
+  - related_posts
+  - banner
+  - image
+  - title
+  - tags
+  - subtitle
+  - sidebar
 ---
 
 <!-- Position --> <div class="home_parent">
