--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -55,6 +55,15 @@ setTimeout(()=>{
 <div style="right: 12.5px; border-radius: 10px; padding: 5px; padding-right: 10px; border: 3px outset #ffffff; background-color: #4e58a2; color: #eeeeee" class="home_daily_tips">
 <a style="font-size: 10px; color: #e9a83e" href="https://ps2wiki.github.io/archive/tips.html" class="clbtn">Previous Tips<sup>[↗]</sup></a><img src="https://i.imgur.com/3wdUA2g.gif"/><!--krx--><strong style="font-size: 1.0em">{{ page.tips }}</strong>
 </div></br>
+
+<!-- Featured --> <div style="right: 12.5px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #006699; color: #eeeeee" class="home_miscellaneous">
+  <h1 style="font-size: 27.5px; color: #ffffff">➤ Featured</h1>
+  <hr></br>
+  <h3><a href="https://ps2wiki.github.io/sas-apps-archive">➽ SAS App Archive <sup><img height="12.5" src="https://i.imgur.com/wcQLQOn.gif"/></sup></a></h3>
+  The one place to download all* PS2 Apps! </br>
+  <sub>*Only MC installable apps available</sub>
+  </br></br><hr></br>
+</div>
   
 <!-- Site Guide -->
 <div style="right: 12.5px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #122021; color: #eeeeee" class="home_site_guide">
@@ -82,13 +91,9 @@ setTimeout(()=>{
   Yearly site-wide Archive
   </br></br><hr></br>
 </div></br>
-<!-- Featured --> <div style="right: 12.5px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #21292f; color: #eeeeee" class="home_miscellaneous">
-  <h1 style="font-size: 27.5px; color: #ffffff">➤ Featured</h1>
+<!-- Miscellaneous --> <div style="right: 12.5px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #21292f; color: #eeeeee" class="home_miscellaneous">
+  <h1 style="font-size: 27.5px; color: #ffffff">➤ Miscellaneous</h1>
   <hr></br>
-  <h3><a href="https://ps2wiki.github.io/sas-apps-archive">➽ SAS App Archive <sup><img height="12.5" src="https://i.imgur.com/wcQLQOn.gif"/></sup></a></h3>
-  The one place to download all* PS2 Apps! </br>
-  <sub>*Only MC installable apps available</sub>
-  </br></br><hr></br>
   <h3><a href="https://github.com/ps2wiki/Contributing">➽ Contributing</a></h3>
   Have new ideas or want to help improve existing stuff? Learn about how you can contribute!
   </br></br><hr></br>
