--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -56,7 +56,7 @@ setTimeout(()=>{
 <a style="font-size: 10px; color: #e9a83e" href="https://ps2wiki.github.io/archive/tips.html" class="clbtn">Previous Tips<sup>[↗]</sup></a><img src="https://i.imgur.com/3wdUA2g.gif"/><!--krx--><strong style="font-size: 1.0em">{{ page.tips }}</strong>
 </div></br>
 
-<!-- Featured --> <div style="right: 12.5px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #234b5f; color: #eeeeee" class="home_miscellaneous">
+<!-- Featured --> <div style="right: 12.5px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #2b4451; color: #eeeeee" class="home_miscellaneous">
   <h1 style="font-size: 27.5px; color: #ffffff">➤ Featured</h1>
   <hr></br>
   <h3><a href="https://ps2wiki.github.io/sas-apps-archive">➽ SAS App Archive <sup><img height="12.5" src="https://i.imgur.com/wcQLQOn.gif"/></sup></a></h3>
