--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -91,11 +91,15 @@ setTimeout(()=>{
   Yearly site-wide Archive
   </br></br><hr></br>
 </div></br>
+  
 <!-- Miscellaneous --> <div style="right: 12.5px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #21292f; color: #eeeeee" class="home_miscellaneous">
   <h1 style="font-size: 27.5px; color: #ffffff">➤ Miscellaneous</h1>
   <hr></br>
   <h3><a href="https://github.com/ps2wiki/Contributing">➽ Contributing</a></h3>
   Have new ideas or want to help improve existing stuff? Learn about how you can contribute!
+  </br></br><hr></br>
+  <h3><a href="https://github.com/ps2wiki/Contributing">➽ Report Problems</a></h3>
+  Want to report bugs, factual inaccuracies or have an issue with any content on the site? Raise an 'issue' here.
   </br></br><hr></br>
 </div></div></div></br>
   
