--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -98,7 +98,7 @@ setTimeout(()=>{
   <h3><a href="https://github.com/ps2wiki/Contributing">➽ Contributing</a></h3>
   Have new ideas or want to help improve existing stuff? Learn about how you can contribute!
   </br></br><hr></br>
-  <h3><a href="https://github.com/ps2wiki/Contributing">➽ Report Problems</a></h3>
+  <h3><a href="https://github.com/ps2wiki/ps2wiki.github.io/issues/new/choose">➽ Report Problems</a></h3>
   Want to report bugs, factual inaccuracies or have an issue with any content on the site? Raise an 'issue' here.
   </br></br><hr></br>
 </div></div></div></br>
