--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -53,7 +53,7 @@ setTimeout(()=>{
 
 <!-- Tips -->
 <div style="right: 12.5px; border-radius: 10px; padding: 5px; padding-right: 10px; border: 3px outset #ffffff; background-color: #4e58a2; color: #eeeeee" class="home_daily_tips">
-<a style="font-size: 10px; color: #e9a83e" href="https://ps2wiki.github.io/archive/tips.html" class="clbtn">Previous Tips<sup>[↗]</sup></a><img src="https://i.imgur.com/3wdUA2g.gif"/><!--krx--><strong style="font-size: 1.0em"></br>{{ page.tips }}</strong>
+<a style="font-size: 10px; color: #e9a83e" href="https://ps2wiki.github.io/archive/tips.html" class="clbtn">Previous Tips<sup>[↗]</sup></a><img src="https://i.imgur.com/3wdUA2g.gif"/><!--krx--><strong style="font-size: 1.0em"></br><div style="padding-left: 10px">{{ page.tips }}</div></strong>
 </div></br>
 
 <!-- Featured --> <div style="right: 12.5px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #2b4451; color: #eeeeee" class="home_miscellaneous">
