--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -27,9 +27,10 @@
     border: 3px outset #ffffff; 
     background-color: #134f5c; 
     color: #eeeeee;
+    display: flex;
 }
 .home_news_block_content {
-padding-left:0px;
+    padding-left:0px;
 }
 .home_latest_posts {
   max-height: 1720px;
@@ -47,6 +48,7 @@ padding-left:0px;
       border: 3px outset #ffffff; 
       background-color: #134f5c; 
       color: #eeeeee;
+      display: block;
   }
   .home_news_block_content {
   padding-left:10px;
