--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -51,6 +51,7 @@
       display: block;
   }
   .home_news_block_content {
+  display: block;
   padding-left:10px;
   }
   .home_multi_post_block {
