--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -48,10 +48,10 @@
       border: 3px outset #ffffff; 
       background-color: #134f5c; 
       color: #eeeeee;
-      display: block;
+      display: inline;
   }
   .home_news_block_content {
-  display: block;
+  
   padding-left:10px;
   }
   .home_multi_post_block {
