--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -44,7 +44,7 @@ setTimeout(()=>{
 
 <div class="home_content">
 <!-- News --> <div style="padding-left: 25px; padding-right: 25px"><div class="home_news_block">
-<div style="float: left"><img src="https://i.imgur.com/1UZvuCz.gif"/></div><div style="float: left" class="home_news_block_content"><strong style="font-size: 1.10em">{{ page.news }}</strong></div><a style="font-size: 10px; color: #bf9000" href="https://ps2wiki.github.io/archive/news.html" class="clbtn">Previous News<sup>[↗]</sup></a></div></div>
+<div style="float: left"><img src="https://i.imgur.com/1UZvuCz.gif"/></div><div class="home_news_block_content"><strong style="font-size: 1.10em">{{ page.news }}</strong></div><a style="font-size: 10px; color: #bf9000" href="https://ps2wiki.github.io/archive/news.html" class="clbtn">Previous News<sup>[↗]</sup></a></div></div>
 
 <!-- Tips, Site Guide & Latest Posts --> <div class="home_multi_post_block">
 <div class="home_post_subparent">
