--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -43,7 +43,9 @@ setTimeout(()=>{
 </br></br></br></br></br>
 
 <div class="home_content">
-<!-- News --> <div style="padding-left: 25px; padding-right: 25px"><div class="home_news_block"><a style="font-size: 10px; color: #bf9000" href="https://ps2wiki.github.io/archive/news.html" class="clbtn">Previous News<sup>[↗]</sup></a><img src="https://i.imgur.com/1UZvuCz.gif"/><div class="home_news_block_content"><strong style="font-size: 1.10em">{{ page.news }}</strong></div></div></div>
+<!-- News --> <div style="padding-left: 25px; padding-right: 25px"><div class="home_news_block"><a style="font-size: 10px; color: #bf9000" href="https://ps2wiki.github.io/archive/news.html" class="clbtn">Previous News<sup>[↗]</sup></a><img src="https://i.imgur.com/1UZvuCz.gif"/>
+<!--<div class="home_news_block_content">-->
+<strong style="font-size: 1.10em">{{ page.news }}</strong><!--</div>--></div></div>
 
 <!-- Tips, Site Guide & Latest Posts --> <div class="home_multi_post_block">
 <div class="home_post_subparent">
