--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -44,9 +44,10 @@ setTimeout(()=>{
 
 <div class="home_content">
 <!-- News --> <div style="padding-left: 25px; padding-right: 25px"><div class="home_news_block">
-<a style="right: 10px; font-size: 10px; color: #bf9000" href="https://ps2wiki.github.io/archive/news.html" class="clbtn">Previous News<sup>[↗]</sup></a></br>
+<div class ="home_news_float">
+<a style="font-size: 10px; color: #bf9000" href="https://ps2wiki.github.io/archive/news.html" class="clbtn">Previous News<sup>[↗]</sup></a></br>
 <div style="max-width: 10%; float: left"><img src="https://i.imgur.com/1UZvuCz.gif"/></div>
-<div class="home_news_block_content"><strong style="font-size: 1.10em">{{ page.news }}</strong></div>
+<div class="home_news_block_content"><strong style="font-size: 1.10em">{{ page.news }}</strong></div></div>
 </div></div>
 
 <!-- Tips, Site Guide & Latest Posts --> <div class="home_multi_post_block">
