--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -44,9 +44,9 @@ setTimeout(()=>{
 
 <div class="home_content">
 <!-- News --> <div style="padding-left: 25px; padding-right: 25px"><div class="home_news_block">
-<div class ="home_news_float">
+<div class ="home_news_float"><div style="align-items: baseline">
   <div style="max-width: 10%; float: left"><img src="https://i.imgur.com/1UZvuCz.gif"/></div>
-  <div class="home_news_block_content"><strong style="font-size: 1.10em">{{ page.news }}</strong></div>
+  <div class="home_news_block_content"><strong style="font-size: 1.10em">{{ page.news }}</strong></div></div>
   <a style="font-size: 10px; color: #bf9000" href="https://ps2wiki.github.io/archive/news.html" class="clbtn">Previous News<sup>[↗]</sup></a>
 </div></div></div>
 
