--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -45,6 +45,10 @@
   .home_content {
     margin-right: 20px;
   }
+  .home_news_float {
+    display: block;
+    width: 100%;
+  }
   .home_news_block {
     width: 100%;
     border-radius: 10px; 
