--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -46,7 +46,7 @@
     margin-right: 20px;
   }
   .home_news_float {
-    display: block;
+    display: inline;
     width: 100%;
   }
   .home_news_block {
