--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -32,6 +32,9 @@
   display: flex;
   width: 100%;
 }
+.home_news_name {
+  width: 100%;
+}
 .home_news_block_content {
   float: left;
   padding-left:0px;
