--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -29,7 +29,7 @@
   color: #eeeeee;
 }
 .home_news_float {
-  display: flex;
+  display: inline-block;
   width: 100%;
 }
 .home_news_block_content {
