--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -44,7 +44,7 @@ setTimeout(()=>{
 
 <div class="home_content">
 <!-- News --> <div style="padding-left: 25px; padding-right: 25px"><div class="home_news_block">
-<div class ="home_news_float"><div style="align-items: baseline" class ="home_news_float">
+<div class ="home_news_float"><div style="align-items: baseline" class ="home_news_child_float">
   <div style="float: left" class ="home_news_name"><img src="https://i.imgur.com/1UZvuCz.gif"/></div>
   <div class="home_news_block_content"><strong style="font-size: 1.10em">{{ page.news }}</strong></div></div>
   <div><a style="font-weight: bold; line-height: 20px; cursor: pointer; transition: 0.3s; margin-left: 10px; font-size: 10px; color: #bf9000" href="https://ps2wiki.github.io/archive/news.html">Previous&nbsp;News<sup>[↗]</sup></a></div>
