--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -49,7 +49,7 @@ display: flex;
       color: #eeeeee;
     }
 .home_news_float {
-display: block;
+display: inline;
 }
   .home_multi_post_block {
     left: 0px;
