--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -58,6 +58,8 @@ align-items: baseline;
 }
 .home_news_content {
 margin-left: 10px;
+margin-right: 10px;
+width: 100%;
 }
   .home_multi_post_block {
     left: 0px;
