--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -55,6 +55,7 @@ margin-left: 0px;
 .home_news_float {
 display: grid;
 align-items: baseline;
+width: 100%;
 }
 .home_news_content {
 margin-left: 10px;
