--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,7 +30,7 @@ body {
   
 
 <!-- Terms of Service Notice -->
-<div style="padding-left: 25px; padding-right: 25px"><div style="position: absolute; margin-right: 30px"><div id="termsofservice" class="tos">
+<div style="padding-left: 25px; padding-right: 25px"><div style="position: absolute; margin-right: 40px"><div id="termsofservice" class="tos">
   <span class="clbtn" onclick="this.parentElement.style.display='none';"><i class="fa fa-times-circle"></i></span>
   <strong>Important:</strong> Please read the <a href="https://ps2wiki.github.io/about.html#terms-of-service">Terms of Service</a> in <a href="https://ps2wiki.github.io/about.html">About</a> before using the site. Thankyou.
 </div>
@@ -45,7 +45,7 @@ setTimeout(()=>{
 <div class="home_content">
 <!-- News --> <div style="padding-left: 25px; padding-right: 25px"><div class="home_news_block">
 <div style="position: absolute; right: 30px"><a style="font-size: 10px; color: #bf9000" href="https://ps2wiki.github.io/archive/news.html" class="clbtn">Previous News<sup>[↗]</sup></a></div>
-<div class="home_news_float"><div style="float: left"><img src="https://i.imgur.com/1UZvuCz.gif"/></div><div style="float: left; margin-right: 10px" class="home_news_content"><strong style="font-size: 1.10em">{{ page.news }}</strong></div></div></div></div>
+<div class="home_news_float"><div style="float: left"><img src="https://i.imgur.com/1UZvuCz.gif"/></div><div style="float: left" class="home_news_content"><strong style="font-size: 1.10em">{{ page.news }}</strong></div></div></div></div>
 
 <!-- Tips, Site Guide & Latest Posts --> <div class="home_multi_post_block">
 <div class="home_post_subparent">
